Update: H1b visa 2020 updated.

--- a/H1B-visa-data-analysis-2020.ipynb
+++ b/H1B-visa-data-analysis-2020.ipynb
@@ -10,7 +10,7 @@
     "This dataset provides a comprehensive record of Labor Condition Application (LCA) disclosures for H1B visa petitions filed with the U.S. Department of Labor (DOL) 2020. The H1B visa is a non-immigrant visa that allows U.S. companies to employ foreign workers in specialty occupations requiring theoretical or technical expertise. These roles typically include fields such as IT, engineering, finance, healthcare, and more. The H1B program is critical for addressing skill gaps in the U.S. workforce and supporting economic growth.\n",
     "\n",
     "Key features\n",
-    "Years Covered: 2020 to 2024.\n",
+    "Years Covered: 2020\n",
     "Number of Records: Includes all LCAs filed during this period.\n",
     "Attributes: Comprehensive fields such as case number, job title, employer name, wage data, work location, and visa classification.\n",
     "Source: Data is based on public disclosures from the U.S. Department of Labor.\n",
